initial and homepage

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    /* Name: custom color palette
+       Author: Ilias Ism
+       URL: https://gradient.page */
+
+    /* CSS: .bg-gradient { background: var(--gradient) } */
+    --gradient: #6441a5;
+
+    --background: 277 28.6% 3.6%;
+    --foreground: 277 4.4% 97.25%;
+
+    --muted: 277 22% 13.5%;
+    --muted-foreground: 277 4.4% 54.5%;
+
+    --popover: 277 56.2% 5.8500000000000005%;
+    --popover-foreground: 277 4.4% 97.25%;
+
+    --card: 277 56.2% 5.8500000000000005%;
+    --card-foreground: 277 4.4% 97.25%;
+
+    --border: 277 22% 13.5%;
+    --input: 277 22% 13.5%;
+
+    --primary: 277 44% 45%;
+    --primary-foreground: 277 4.4% 97.25%;
+
+    --secondary: 277 22% 13.5%;
+    --secondary-foreground: 277 4.4% 97.25%;
+
+    --accent: 277 22% 13.5%;
+    --accent-foreground: 277 4.4% 97.25%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 277 4.4% 97.25%;
+
+    --ring: 277 44% 45%;
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
