--- a/components/css/hero.module.css
+++ b/components/css/hero.module.css
@@ -1,16 +1,18 @@
 .gradientBg {
   background: rgb(218, 62, 223);
-  background: radial-gradient(
-    circle,
+  background: linear-gradient(
+    48deg,
     rgba(218, 62, 223, 1) 0%,
     rgba(117, 70, 175, 1) 51%,
     rgba(199, 73, 194, 1) 100%
   );
 
-  filter: blur(300px);
-  width: 80%;
+  filter: blur(200px);
+  width: 100%;
   position: absolute;
   bottom: 0;
   height: 400px;
   z-index: -1;
+  left: 0;
+  right: 0;
 }
