style: :rocket: User dashboard page ui

--- a/app/(dashboard)/_components/css/layout.module.css
+++ b/app/(dashboard)/_components/css/layout.module.css
@@ -16,7 +16,7 @@
 }
 
 .active {
-  background: #0a070c !important;
+  background: #040913 !important;
   color: white;
   position: relative;
 }
@@ -36,10 +36,16 @@
 .active::before {
   top: calc(var(--border-radius) * -1);
   border-radius: 0 0 100vw 0;
-  box-shadow: 5px 5px 0 5px #0a070c;
+  box-shadow: 5px 5px 0 5px #040913;
 }
 .active::after {
   bottom: calc(var(--border-radius) * -1);
   border-radius: 0 100vw 0 0;
-  box-shadow: 5px -5px 0 5px #0a070c;
+  box-shadow: 5px -5px 0 5px #040913;
+}
+
+@media (max-width: 768px) {
+  .body {
+    grid-template-columns: 8rem 1fr;
+  }
 }
