style: upgrade theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,36 +9,36 @@
        URL: https://gradient.page */
 
     /* CSS: .bg-gradient { background: var(--gradient) } */
-    --gradient: #1fa2ff;
+    --gradient: linear-gradient(to top left, #5c258d, #4389a2);
 
-    --background: 218 65% 4.48%;
-    --foreground: 218 10% 97.8%;
+    --background: 289 37.699999999999996% 1%;
+    --foreground: 289 5.8% 96.75%;
 
-    --muted: 218 50% 16.8%;
-    --muted-foreground: 218 10% 55.6%;
+    --muted: 289 28.999999999999996% 10.5%;
+    --muted-foreground: 289 5.8% 53.5%;
 
-    --popover: 218 45% 7.280000000000001%;
-    --popover-foreground: 218 10% 97.8%;
+    --popover: 289 53.4% 4.55%;
+    --popover-foreground: 289 5.8% 96.75%;
 
-    --card: 218 45% 7.280000000000001%;
-    --card-foreground: 218 10% 97.8%;
+    --card: 289 53.4% 4.55%;
+    --card-foreground: 289 5.8% 96.75%;
 
-    --border: 218 50% 16.8%;
-    --input: 218 50% 16.8%;
+    --border: 289 28.999999999999996% 10.5%;
+    --input: 289 28.999999999999996% 10.5%;
 
-    --primary: 218 100% 56%;
-    --primary-foreground: 218 10% 5.6000000000000005%;
+    --primary: 289 58% 35%;
+    --primary-foreground: 289 5.8% 96.75%;
 
-    --secondary: 218 50% 16.8%;
-    --secondary-foreground: 218 10% 97.8%;
+    --secondary: 289 28.999999999999996% 10.5%;
+    --secondary-foreground: 289 5.8% 96.75%;
 
-    --accent: 218 50% 16.8%;
-    --accent-foreground: 218 10% 97.8%;
+    --accent: 289 28.999999999999996% 10.5%;
+    --accent-foreground: 289 5.8% 96.75%;
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 218 10% 97.8%;
+    --destructive-foreground: 289 5.8% 96.75%;
 
-    --ring: 218 100% 56%;
+    --ring: 289 58% 35%;
   }
 }
 @layer base {
